# tetris-autoplay

./: .gitignore  CMakeLists.txt  LISENCE  LISENCE.md  README.md  fileptr  fileptr.c  getch  getch.c  kbhit.c  loop  loop.c  struct  struct.c  tetris  tetris.c  time  time.c  tmp  tmp.c  transform  transform.c  unistd  unistd.c
asdf/: helloworld.c
py_version/: block.py  block_factory.py  board.py  command.py  init.py  input_handler.py  keyboard.py  movable.py  observable.py  postable.py  tetris_model.py  view.py
py_version/kbObserver/: Robot.py  __init__.py  actor.py  keyboard.py  observer.py
